--- a/src/style/base/colors.scss
+++ b/src/style/base/colors.scss
@@ -2,3 +2,16 @@
 body {
 	background: #efefef;
 }
+
+.u-bg-blue {
+	background: #6F9FD8 !important;
+}
+.u-bg-red {
+	background: #944743 !important;
+}
+.u-bg-green {
+	background: #00A591 !important;
+}
+.u-bg-yellow {
+	background: #F6D155 !important;
+}
