--- a/src/style/components/box.scss
+++ b/src/style/components/box.scss
@@ -1,6 +1,6 @@
 .c-box {
 	background: #fff;
-	padding: 8px;
+	padding: 20px;
 	box-sizing: border-box;
 	border-top: 4px solid #2c3e50;
 	margin-bottom: 20px;
@@ -44,7 +44,7 @@
 	.error {
 		border: 1px solid #ccc;
 		background: #efefef;
-		padding: 4px;
+		padding: 10px;
 		margin-top: 8px;
 	}
 
@@ -52,8 +52,8 @@
 		text-align: left;
 		font-weight: bold;
 		border-bottom: 1px solid #efefef;
-
-		padding: 10px;
+		margin-bottom: 10px;
+		padding: 10px 0px;
 		font-wize: 1.4rem;
 		width: 100%;
 		display: block;
