--- a/src/style/components/box.scss
+++ b/src/style/components/box.scss
@@ -3,7 +3,7 @@
 	padding: 20px;
 	box-sizing: border-box;
 	border-top: 4px solid #2c3e50;
-	margin-bottom: 20px;
+	margin: 4px;
 
 	-webkit-box-shadow: 0 3px 10px 1px #B8B8B8;
 	box-shadow: 0 3px 10px 1px #B8B8B8;
